assets/admission-webhook/network-policy-downstream.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: admission-webhook
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/name: admission-webhook
    app.kubernetes.io/part-of: openshift-monitoring
  name: allow-all-admission-webhook
  namespace: openshift-monitoring
spec:
  egress:
  - {}
  ingress:
  - {}
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
